--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title></title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="estilo/estilo.css">
 </head>
 <body>
 <div>Hola Mundo</div>
